feat: file metadata function

--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
     <h3><a id="file-metadata-request" class="anchor" aria-hidden="true" href="#file-metadata-request"><span
                 aria-hidden="true" class="octicon octicon-link"></span></a>File Metadata Request</h3>
     <form class="single-form" action="/api/metadata" method="POST" enctype="multipart/form-data"><input type="file"
-            name="file"><br><button type="submit">Submit</button></form>
+            name="file" required><br><button type="submit">Submit</button></form>
     <h3><a id="file-metadata-response" class="anchor" aria-hidden="true"
             href="#file-metadata-response"><span aria-hidden="true" class="octicon octicon-link"></span></a>File
         Metadata Response</h3>
