feat: create user and exercise functions

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
     <h3><a id="create-user-request" class="anchor" aria-hidden="true" href="#create-user-request"><span
                 aria-hidden="true" class="octicon octicon-link"></span></a>Create User Request</h3>
     <form class="single-form" action="/api/exercisetracker" method="POST">
-        Create New User<input type="text" name="username" placeholder="username" id="username"><button
+        Create New User<input required type="text" name="username" placeholder="username" id="username"><button
             type="submit">Submit</button> <br>
         <strong><em>OR</em></strong>
     </form>
